--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "build": "npx prisma generate && npx prisma migrate deploy",
+    "seed": "node seed.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -13,7 +13,7 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
-    "@prisma/client": "5.22.0",
+    "@supabase/supabase-js": "^2.86.0",
     "bad-words": "^3.0.4",
     "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
@@ -22,7 +22,6 @@
     "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
-    "nodemon": "^3.1.11",
-    "prisma": "5.22.0"
+    "nodemon": "^3.1.11"
   }
 }
